k8s-manifests/deployment-service3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: learner-microservice
  template:
    metadata:
      labels:
        app: learner-microservice
    spec:
      containers:
        - name: learner-microservice
          image: learner-microservice:latest
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: learner-microservice
spec:
  selector:
    app: learner-microservice
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
