k8s-manifests/deployment-service4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-microservice
  template:
    metadata:
      labels:
        app: payment-microservice
    spec:
      containers:
        - name: payment-microservice
          image: payment-microservice:latest
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: payment-microservice
spec:
  selector:
    app: payment-microservice
  ports:
    - protocol: TCP
      port: 4004
      targetPort: 4004
  type: ClusterIP
