k8s-manifests/deployment-service5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notification-microservice
  template:
    metadata:
      labels:
        app: notification-microservice
    spec:
      containers:
        - name: notification-microservice
          image: notification-microservice:latest
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: notification-microservice
spec:
  selector:
    app: notification-microservice
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
  type: ClusterIP
