k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  rules:
    - host: service1.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentication-microservice
                port:
                  number: 4001
    - host: service2.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-microservice
                port:
                  number: 4003
    - host: service3.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learner-microservice
                port:
                  number: 4002
    - host: service4.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-microservice
                port:
                  number: 4004
    - host: service5.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-microservice
                port:
                  number: 4005
    - host: frontend.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
